Add version field to xgs_rating.cfg. Increase time resolution during touchdown phase.

--- a/A3xx-xgs_rating.cfg
+++ b/A3xx-xgs_rating.cfg
@@ -6,6 +6,10 @@
 # https://www.pprune.org/tech-log/510634-definition-hard-landing-maintenance.html
 #
 # Format:
+# First line: version
+# V30
+#
+# next lines
 # vy(m/s);vy(fpm);text
 #   meaning: if landing speed is < vy display text
 # one of the vy must be specified, if both are present the first one wins
@@ -15,7 +19,8 @@
 # last line:
 #;;text
 #
-# max 10 lines
+# max 10 lines ratings
+V30
 ;180;Smooth landing
 ;240;Firm landing
 ;600;Uncomfortable landing
