Display results in window

--- a/Makefile.vc64
+++ b/Makefile.vc64
@@ -11,7 +11,7 @@ PLUGDIR=..\xgsbin\xgs
 CXX=cl
 LD=link
 
-CXXFLAGS+=/EHsc /DWINDOWS /nologo /MT /O2 /GL /DNDEBUG /fp:precise /DWIN32 \
+CXXFLAGS+=/W2 /EHsc /DWINDOWS /nologo /MT /O2 /GL /fp:precise /DWIN32 \
 	/I$(SDK)/CHeaders/XPLM /I$(SDK)/CHeaders/Widgets /I$(ACFUT)/include /DIBM=1 /DXPLM200
 LNFLAGS=/nologo /LTCG /LIBPATH:$(SDK)/Libraries/Win /LIBPATH:$(OPENAL)/Libs/Win64 /LIBPATH:$(ACFUT)/win64/lib /DLL 
 LIBS=acfutils.lib opengl32.lib xplm_64.lib xpwidgets_64.lib
