set SDK level in all Makefiles

--- a/Makefile.lin64
+++ b/Makefile.lin64
@@ -7,7 +7,9 @@ HEADERS=$(wildcard *.h)
 SOURCES=$(wildcard *.c)
 OBJECTS=$(SOURCES:.c=.o)
 
-CFLAGS=-Wall -I$(SDK)/CHeaders/XPLM -I$(SDK)/CHeaders/Widgets -I$(ACFUT)/include -DLIN=1 -DXPLM200 -fPIC -fno-stack-protector
+CFLAGS=-Wall -I$(SDK)/CHeaders/XPLM -I$(SDK)/CHeaders/Widgets -I$(ACFUT)/include -DLIN=1 -fPIC -fno-stack-protector \
+    -DXPLM200 -DXPLM210 -DXPLM300 -DXPLM301
+
 LNFLAGS=-shared -rdynamic -nodefaultlibs -undefined_warning
 LIBS=-L$(ACFUT)/lin64/lib -lacfutils
 
