add optional DEFINES for cc

--- a/Makefile.mgw64
+++ b/Makefile.mgw64
@@ -13,7 +13,7 @@ LD=x86_64-w64-mingw32-gcc
 
 CFLAGS+=-mdll -g0 -O2 -s -Wall -fdiagnostics-color -Wno-format-overflow -DWINDOWS -DWIN32 \
 	-I$(SDK)/CHeaders/XPLM -I$(SDK)/CHeaders/Widgets -I$(ACFUT)/include -DIBM=1 \
-    -DXPLM200 -DXPLM210 -DXPLM300 -DXPLM301
+    -DXPLM200 -DXPLM210 -DXPLM300 -DXPLM301 $(DEFINES)
 
 LDFLAGS=-shared -static-libgcc -static -lpthread
 LIBS=$(ACFUT)/win64/lib/acfutils.lib -L$(SDK)/Libraries/Win -lXPLM_64 -lXPWidgets_64
