--- a/Makefile.mgw64
+++ b/Makefile.mgw64
@@ -16,11 +16,14 @@ LACFU_OBJECTS=$(addprefix $(OBJDIR)/, $(notdir $(LACFU_SOURCES:.c=.o)))
 CC=x86_64-w64-mingw32-gcc
 LD=x86_64-w64-mingw32-gcc
 
-CFLAGS+=-mdll -g0 -O2 -s -Wall -fdiagnostics-color -Wno-format-overflow \
-    -D_POSIX_C_SOURCE -DUNICODE -DLIBACFUTILS_VERSION='$(LIBACFUTILS_VERSION)' \
-    -DWINDOWS -DWIN32 -DWINVER=0x0A00 -D_WIN32_WINNT=0x0A00 \
-	-I$(SDK)/CHeaders/XPLM -I$(SDK)/CHeaders/Widgets -Ilibacfutils/src/ -DIBM=1 \
+COMMON_CFLAGS+=-O2 -s -Wall -fdiagnostics-color -Wno-format-overflow \
+    -D_POSIX_C_SOURCE  \
+    -DIBM -DWINDOWS -DWIN32 -DWINVER=0x0A00 -D_WIN32_WINNT=0x0A00 \
+	-I$(SDK)/CHeaders/XPLM -I$(SDK)/CHeaders/Widgets -Ilibacfutils/src/ \
     -DXPLM200 -DXPLM210 -DXPLM300 -DXPLM301 $(DEFINES)
+
+CFLAGS=-mdll $(COMMON_CFLAGS)
+LACFU_CFLAGS=-DUNICODE -DLIBACFUTILS_VERSION='$(LIBACFUTILS_VERSION)' $(COMMON_CFLAGS)
 
 LDFLAGS=-shared -static-libgcc -static -lpthread
 LIBS=-L$(SDK)/Libraries/Win -lDbghelp -lpsapi -lXPLM_64 -lXPWidgets_64 -lz -liconv
@@ -32,7 +35,7 @@ $(OBJDIR)/%.o: %.c
 	$(CC) $(CFLAGS) -o $@ -c $<
 
 $(OBJDIR)/%.o: libacfutils/src/%.c
-	$(CC) $(CFLAGS) -o $@ -c $<
+	$(CC) $(LACFU_CFLAGS) -o $@ -c $<
 	
 $(TARGET): $(OBJECTS) $(LACFU_OBJECTS)
 	$(LD) -o $(TARGET) $(LDFLAGS) $(OBJECTS) $(LACFU_OBJECTS) $(LIBS)
