--- a/acf_mapping.cfg
+++ b/acf_mapping.cfg
@@ -5,6 +5,7 @@ ICAO_code config_file
 #
 A319 A3xx-xgs_rating.cfg
 A320 A3xx-xgs_rating.cfg
+A20N A3xx-xgs_rating.cfg
 A321 A3xx-xgs_rating.cfg
 A21N A3xx-xgs_rating.cfg
 A346 A3xx-xgs_rating.cfg
