simplify build, bump version

--- a/Makefile.lin64
+++ b/Makefile.lin64
@@ -1,4 +1,4 @@
-PLUGINS=../X-Plane/Resources/plugins/xgs
+PLUGINS=../../X-Plane-12/Resources/plugins/xgs
 SDK=../SDK
 OBJDIR=./OBJ
 
@@ -11,8 +11,7 @@ OBJECTS=$(addprefix $(OBJDIR)/, $(SOURCES:.c=.o))
 LACFU_SOURCES=$(wildcard libacfutils/src/*.c)
 LACFU_OBJECTS=$(addprefix $(OBJDIR)/, $(notdir $(LACFU_SOURCES:.c=.o)))
 
-COMMON_CFLAGS=-Wall -I$(SDK)/CHeaders/XPLM -I$(SDK)/CHeaders/Widgets -Ilibacfutils/src -fPIC -DLIN=1 -fno-stack-protector \
-    -DXPLM200 -DXPLM210 -DXPLM300 -DXPLM301
+COMMON_CFLAGS=-Wall -I$(SDK)/CHeaders/XPLM -I$(SDK)/CHeaders/Widgets -Ilibacfutils/src -fPIC -DLIN=1 -fno-stack-protector
 CFLAGS=$(COMMON_CFLAGS)
 LACFU_CFLAGS=-fvisibility=hidden -DLIBACFUTILS_VERSION='$(LIBACFUTILS_VERSION)' $(COMMON_CFLAGS)
 
