--- a/Makefile.mgw64
+++ b/Makefile.mgw64
@@ -20,7 +20,7 @@ COMMON_CFLAGS+=-O2 -s -Wall -fdiagnostics-color -Wno-format-overflow \
     -D_POSIX_C_SOURCE  \
     -DIBM -DWINDOWS -DWIN32 -DWINVER=0x0A00 -D_WIN32_WINNT=0x0A00 \
 	-I$(SDK)/CHeaders/XPLM -I$(SDK)/CHeaders/Widgets -Ilibacfutils/src/ \
-    -DXPLM200 -DXPLM210 -DXPLM300 -DXPLM301 $(DEFINES)
+    $(DEFINES)
 
 CFLAGS=-mdll $(COMMON_CFLAGS)
 LACFU_CFLAGS=-DUNICODE -DLIBACFUTILS_VERSION='$(LIBACFUTILS_VERSION)' $(COMMON_CFLAGS)
