add A339 to acf_mapping.cfg

--- a/acf_mapping.cfg
+++ b/acf_mapping.cfg
@@ -9,4 +9,5 @@ A20N A3xx-xgs_rating.cfg
 A321 A3xx-xgs_rating.cfg
 A21N A3xx-xgs_rating.cfg
 A346 A3xx-xgs_rating.cfg
+A339 A3xx-xgs_rating.cfg
 B742 A3xx-xgs_rating.cfg
